change url for GoBack

--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -164,7 +164,7 @@
 
                 <!-- Back to top -->
                 <div id='contact' class='vspace-top'>
-                    <a href="../index.html#header" style="display: block; text-align: right;">[GoBack]</a>
+                    <a href="https://hwang7308.github.io" style="display: block; text-align: right;">[GoBack]</a>
                 </div>
             </div>
         </div>
