--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
 <body>
     <div class="topnav">
         <div class='container'>
-            <a href="#contact">Contact</a>
+            <a href="./subpage/contact.html#contact">Contact</a>
+            <a href="./subpage/aboutme.html#about">About</a>
             <a href="#research">Research</a>
             <!-- <a href="#publications">Publications</a> -->
             <a href="#news">News</a>
-            <a href="./subpage/aboutme.html#about">About</a>
             <a href="#header">Home</a>
         </div>
     </div>
@@ -278,15 +278,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-
-                <!-- List of contact information -->
-                <div id='contact' class='vspace-top'>
-                    <h1>Contact</h1>
-                    <p>
-                        Feel free to get in touch!
-                        You can <a href="jackw7308@gmail.com">email</a> me, or through <a href="#header">the other ways</a> listed above.
-                    </p>
                 </div>
 
                 <!-- Back to top -->
