--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -112,11 +112,11 @@
 <body>
     <div class="topnav">
         <div class='container'>
-            <a href="../index.html#contact">Contact</a>
+            <a href="./contact.html#contact">Contact</a>
+            <a href="#about">About</a>
             <a href="../index.html#research">Research</a>
             <!-- <a href="#publications">Publications</a> -->
             <a href="../index.html#news">News</a>
-            <a href="#about">About</a>
             <a href="../index.html#header">Home</a>
         </div>
     </div>
@@ -145,7 +145,6 @@
                             &emsp; Supervisor: <a href="https://sice.bupt.edu.cn/Home/Team_Intro1___individual_page/Team_Introduction/Men_Aidong_Team.htm">Aidong Men</a>
                         </div>
                     </div>
-                    
                     <div class='row vspace-top-news'>
                         <div class="col-sm-2 news-date">
                             Research Experience
@@ -157,16 +156,15 @@
                             - Undergraduate Research Assistant, Next Generation Internet Research Center, BUPT, May - Oct. 2017
                         </div>
                     </div>
-                </div>
-                <div class='vspace-top'>
-                    Here is my <a href="../pdfs/CV-Hao-Wang.pdf">CV</a> if you are interested!
-                </div>
-
-                <!-- Back to top -->
-                <div id='contact' class='vspace-top'>
-                    <a href="https://hwang7308.github.io" style="display: block; text-align: right;">[GoBack]</a>
+                    <div class='vspace-top'>
+                        Here is my <a href="../pdfs/CV-Hao-Wang.pdf">CV</a> if you are interested!
+                    </div>
                 </div>
             </div>
+        </div>
+        <!-- Back to top -->
+        <div id='contact' class='vspace-top'>
+            <a href="https://hwang7308.github.io" style="display: block; text-align: right;">[GoBack]</a>
         </div>
     </div>
 
