--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
     <!-- Page icon -->
     <link rel="icon" href="imgs/icon.ico" type="image/x-icon"/>
+    
+    <!-- Icons from fontawesome -->
+    <script src="https://kit.fontawesome.com/0575f02792.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/academicons/css/academicons.min.css"/>
 
     <!-- Custom Styles -->
     <style>
@@ -138,12 +142,13 @@
                         jackw7308 (at) gmail (dot) com
                     </div>
                     <div>
-                        <!-- <a href="https://scholar.google.com/citations?user=X44QVV4AAAAJ&hl=en&oi=ao">[Google Scholar]</a> -->
-                        <a href="https://orcid.org/0000-0003-3847-524X">[ORCID]</a>
-                        <a href="https://github.com/HWANG7308">[GitHub]</a>
-                        <a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US">[LinkedIn]</a>
-                        <!-- <a href="https://twitter.com/vincesitzmann">[Twitter]</a> -->
-                        <a href="./pdfs/CV-Hao-Wang.pdf">[CV]</a>
+                        <br />
+                        &emsp;<a href="https://scholar.google.com/citations?user=X44QVV4AAAAJ&hl=en&oi=ao"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+                        &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4F6071;"></i></a>
+                        &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 24px; color: #4F6071;"></i></a>
+                        &emsp;<a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4F6071;"></i></a>
+                        <!-- &emsp;<a href="https://twitter.com/vincesitzmann">[Twitter]</a> -->
+                        &emsp;<a href="./pdfs/CV-Hao-Wang.pdf">[CV]</a>
                     </div>
                 </div>
             </div>
