--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -12,6 +12,9 @@
 
     <!-- Page icon -->
     <link rel="icon" href="../imgs/icon.ico" type="image/x-icon"/>
+    
+    <!-- Icons from fontawesome -->
+    <script src="https://kit.fontawesome.com/0575f02792.js" crossorigin="anonymous"></script>
 
     <!-- Custom Styles -->
     <style>
@@ -126,6 +129,8 @@
             <div class='col offset-sm-1'>
                 <div class='vspace-top'>
                     <h1>About me</h1>
+                </div>
+                <div class='vspace-top'>
                     <div class='row vspace-top-news'>
                         <div class="col-sm-2 news-date">
                             Education
@@ -133,16 +138,17 @@
                         <div class="col">
                             - MSc (with Distinction), Informatics, The University of Edinburgh, 2019
                             <br />
-                            &emsp; Dissertation: Gender Identification from 3D Facial Surface Model
+                            &emsp;Dissertation: Gender Identification from 3D Facial Surface Model
                             <br />
-                            &emsp; Supervisor: <a href="https://homepages.inf.ed.ac.uk/rbf/">Bob Fisher</a>
+                            &emsp;Supervisor: <a href="https://homepages.inf.ed.ac.uk/rbf/">Bob Fisher</a>
                             <br />
                             <br />
                             - B.Eng., Telecommunication Engineering, Beijing University of Posts and Telecommunications, 2018
                             <br />
-                            &emsp; Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel
+                            &emsp;Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on
+                            Sub-pixel
                             <br />
-                            &emsp; Supervisor: <a href="https://sice.bupt.edu.cn/Home/Team_Intro1___individual_page/Team_Introduction/Men_Aidong_Team.htm">Aidong Men</a>
+                            &emsp;Supervisor: <a href="https://sice.bupt.edu.cn/Home/Team_Intro1___individual_page/Team_Introduction/Men_Aidong_Team.htm">Aidong Men</a>
                         </div>
                     </div>
                     <div class='row vspace-top-news'>
