--- a/subpage/contact.html
+++ b/subpage/contact.html
@@ -13,6 +13,9 @@
     <!-- Page icon -->
     <link rel="icon" href="../imgs/icon.ico" type="image/x-icon"/>
 
+    <!-- Icons from fontawesome -->
+    <script src="https://kit.fontawesome.com/0575f02792.js" crossorigin="anonymous"></script>
+
     <!-- Custom Styles -->
     <style>
         body {
@@ -136,6 +139,11 @@
                         <br />
                         <br />
                         You can also find me at:
+                        &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 36px; color: #4F6071;"></i></a>
+                        &emsp;<a href="https://www.facebook.com/profile.php?id=100007039683298"><i class="fab fa-facebook-f" style="font-size: 36px; color: #4F6071;"></i></a>
+                        &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 36px; color: #4F6071;"></i></a>
+                        &emsp;<a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"><i class="fab fa-linkedin-in" style="font-size: 36px; color: #4F6071;"></i></a>
+                        &emsp;<a href="https://www.instagram.com/_1wanghao1_/"><i class="fab fa-instagram" style="font-size: 36px; color: #4F6071;"></i></a>
                         <br />
                     </p>
                 </div>
