--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
                     </div>
                     <div>
                         <br />
-                        &emsp;<a href="https://scholar.google.com/citations?user=X44QVV4AAAAJ&hl=en&oi=ao"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+                        &emsp;<a href="https://scholar.google.com/citations?user=X44QVV4AAAAJ&hl=en&oi=ao"><i class="ai ai-google-scholar" style="font-size: 24px; color: #4F6071;"></i></a>
                         &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4F6071;"></i></a>
                         &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 24px; color: #4F6071;"></i></a>
                         &emsp;<a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4F6071;"></i></a>
                         <!-- &emsp;<a href="https://twitter.com/vincesitzmann">[Twitter]</a> -->
-                        &emsp;<a href="./pdfs/CV-Hao-Wang.pdf">[CV]</a>
+                        &emsp;<a href="./pdfs/CV-Hao-Wang.pdf"><i class="ai ai-cv" style="font-size: 24px; color: #4F6071;"></i></a>
                     </div>
                 </div>
             </div>
