--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -170,7 +170,7 @@
         </div>
         <!-- Back to top -->
         <div id='contact' class='vspace-top'>
-            <a href="https://hwang7308.github.io" style="display: block; text-align: right;">[GoBack]</a>
+            <a href="../index.html" style="display: block; text-align: right;">[GoBack]</a>
         </div>
     </div>
 
