change About me to About Me

--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -128,7 +128,7 @@
         <div class='row vspace-top'>
             <div class='col offset-sm-1'>
                 <div class='vspace-top'>
-                    <h1>About me</h1>
+                    <h1>About Me</h1>
                 </div>
                 <div class='vspace-top'>
                     <div class='row vspace-top-news'>
