update small details

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <!-- Page icon -->
     <link rel="icon" href="imgs/icon.ico" type="image/x-icon"/>
     
-    <!-- Icons from fontawesome -->
+    <!-- Icons from Fontawesome & Academicons -->
     <script src="https://kit.fontawesome.com/0575f02792.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/academicons/css/academicons.min.css"/>
+    <link rel="stylesheet" href="./academicons/css/academicons.min.css"/>
 
     <!-- Custom Styles -->
     <style>
