--- a/subpage/contact.html
+++ b/subpage/contact.html
@@ -133,7 +133,7 @@
                 </div>
                 <div class='vspace-top'>
                     <p>
-                        Feel free to get in touch!
+                        Feel free to get in touch! I will get back to you ASAP :D
                         <br />
                         <br />
                         Email: <a href="jackw7308@gmail.com">jackw7308@gmail.com</a>
