--- a/dissertation/beng/abstract.html
+++ b/dissertation/beng/abstract.html
@@ -16,4 +16,5 @@
     <br />
     KEY WORDS: super-resolution, sub-pixel, convolutional neural network
     </p>
+    <a href="../../index.html" style="display: block; text-align: right;">[GoBack]</a>
 </html>
