add exchange student experience

--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -146,10 +146,12 @@
                             <br />
                             - B.Eng., Telecommunication Engineering, Beijing University of Posts and Telecommunications, 2018
                             <br />
-                            &emsp;Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on
-                            Sub-pixel
+                            &emsp;Dissertation: Realization of Image Super-Resolution by Implementing Convolutional Neural Network on Sub-pixel
                             <br />
                             &emsp;Supervisor: <a href="https://sice.bupt.edu.cn/Home/Team_Intro1___individual_page/Team_Introduction/Men_Aidong_Team.htm">Aidong Men</a>
+                            <br />
+                            <br />
+                            - Exchange student, Högskolan i Skövde, Sept. 2016 - Jan. 2017
                         </div>
                     </div>
                     <div class='row vspace-top-news'>
