--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             </div>
                             <div>
                                 <a href="https://hwang7308.github.io/dissertation/msc/abstract.html">[Abstract]</a>
-                                <a href="https://project-archive.inf.ed.ac.uk/all/msc/20193468/msc_proj.pdf">[PDF]</a>
+                                <a href="https://project-archive.inf.ed.ac.uk/all/msc/20193468/msc_proj.pdf">[PDF (School Members Only)]</a>
                             </div>
                         </div>
                     </div>
