change back button

--- a/dissertation/beng/abstract.html
+++ b/dissertation/beng/abstract.html
@@ -16,5 +16,5 @@
     <br />
     KEY WORDS: super-resolution, sub-pixel, convolutional neural network
     </p>
-    <a href="../../index.html#research" style="display: block; text-align: right;">[GoBack]</a>
+    <a href="../../index.html#research" style="display: block; text-align: center;">[Back]</a>
 </html>
