--- a/dissertation/msc/abstract.html
+++ b/dissertation/msc/abstract.html
@@ -14,5 +14,5 @@
     The evaluation of performance in this dissertation also reflects a fluctuation due to the limitation of the dataset used in this project, which inspires further evaluation using more massive datasets in future work.
     The performance also supports the value to research in 3D computer vision problems with geometric information extracted from conformal mapping.
     </p>
-    <a href="../../index.html#research" style="display: block; text-align: right;">[GoBack]</a>
+    <a href="../../index.html#research" style="display: block; text-align: center;">[Back]</a>
 </html>
