--- a/index.html
+++ b/index.html
@@ -285,12 +285,11 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- Back to top -->
-                <div id='contact' class='vspace-top'>
-                    <a href="#header" style="display: block; text-align: right;">[Back to top]</a>
-                </div>
             </div>
+        </div>
+        <!-- Back to top -->
+        <div id='contact' class='vspace-top'>
+            <a href="#header" style="display: block; text-align: center;">[Back to Top]</a>
         </div>
     </div>
 
