--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -173,7 +173,7 @@
         </div>
         <!-- Back to top -->
         <div id='contact' class='vspace-top'>
-            <a href="../index.html" style="display: block; text-align: right;">[GoBack]</a>
+            <a href="../index.html" style="display: block; text-align: center;">[Back to Home]</a>
         </div>
     </div>
 
