add cv link in bio

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                         <br />
                         <br />
                         I am also an aspiring musician and <a href="https://www.instagram.com/_1wanghao1_/">photographer</a>.
+                        <br />
+                        <br />
+                        You can view my CV <a href="./pdfs/CV-Hao-Wang.pdf">here</a>.
                     </p>
                 </div>
 
