change some hyperlinks

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
 <body>
     <div class="topnav">
         <div class='container'>
-            <a href="./subpage/contact.html#contact">Contact</a>
-            <a href="./subpage/aboutme.html#about">About</a>
+            <a href="./subpage/contact.html">Contact</a>
+            <a href="./subpage/aboutme.html">About</a>
             <a href="#research">Research</a>
             <!-- <a href="#publications">Publications</a> -->
             <a href="#news">News</a>
