--- a/subpage/contact.html
+++ b/subpage/contact.html
@@ -117,11 +117,11 @@
     <div class="topnav">
         <div class='container'>
             <a href="#contact">Contact</a>
-            <a href="./aboutme.html#about">About</a>
+            <a href="./aboutme.html">About</a>
             <a href="../index.html#research">Research</a>
             <!-- <a href="#publications">Publications</a> -->
             <a href="../index.html#news">News</a>
-            <a href="../index.html#header">Home</a>
+            <a href="../index.html">Home</a>
         </div>
     </div>
 
