--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -116,12 +116,12 @@
 <body>
     <div class="topnav">
         <div class='container'>
-            <a href="./contact.html#contact">Contact</a>
+            <a href="./contact.html">Contact</a>
             <a href="#about">About</a>
             <a href="../index.html#research">Research</a>
             <!-- <a href="#publications">Publications</a> -->
             <a href="../index.html#news">News</a>
-            <a href="../index.html#header">Home</a>
+            <a href="../index.html">Home</a>
         </div>
     </div>
 
