change bob's name in the page

--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -141,7 +141,7 @@
                             <br />
                             &emsp;Dissertation: Gender Identification from 3D Facial Surface Model
                             <br />
-                            &emsp;Supervisor: <a href="https://homepages.inf.ed.ac.uk/rbf/">Bob Fisher</a>
+                            &emsp;Supervisor: <a href="https://homepages.inf.ed.ac.uk/rbf/">Robert B. Fisher</a>
                             <br />
                             <br />
                             - B.Eng., Telecommunication Engineering, Beijing University of Posts and Telecommunications, 2018
