delete backtohome in about&contact, fix hyperlinks to homepage

--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -172,9 +172,9 @@
             </div>
         </div>
         <!-- Back to top -->
-        <div id='contact' class='vspace-top'>
-            <a href="../index.html" style="display: block; text-align: center;">[Back to Home]</a>
-        </div>
+        <!-- <div class='vspace-top'>
+            <a href="#about" style="display: block; text-align: center;">[Back to Top]</a>
+        </div> -->
     </div>
 
     <!-- <div id='footer' class='vspace-top'>
