--- a/subpage/contact.html
+++ b/subpage/contact.html
@@ -125,10 +125,10 @@
         </div>
     </div>
 
-    <div id="about" class='container'>
+    <div id="contact" class='container'>
         <div class='row vspace-top'>
             <div class='col offset-sm-1'>
-                <div id='contact' class='vspace-top'>
+                <div class='vspace-top'>
                     <h1>Contact</h1>
                 </div>
                 <div class='vspace-top'>
@@ -152,9 +152,9 @@
             </div>
         </div>
         <!-- Back to top -->
-        <div id='contact' class='vspace-top'>
-            <a href="../index.html" style="display: block; text-align: center;">[Back to Home]</a>
-        </div>
+        <!-- <div class='vspace-top'>
+            <a href="#contact" style="display: block; text-align: center;">[Back to Top]</a>
+        </div> -->
     </div>
 
     <!-- <div id='footer' class='vspace-top'>
