--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <a href="#research">Research</a>
             <!-- <a href="#publications">Publications</a> -->
             <a href="#news">News</a>
-            <a href="#header">Home</a>
+            <a href="index.html">Home</a>
         </div>
     </div>
 
@@ -291,8 +291,8 @@
             </div>
         </div>
         <!-- Back to top -->
-        <div id='contact' class='vspace-top'>
-            <a href="#header" style="display: block; text-align: center;">[Back to Top]</a>
+        <div class='vspace-top'>
+            <a href="index.html" style="display: block; text-align: center;">[Back to Top]</a>
         </div>
     </div>
 
