--- a/index.html
+++ b/index.html
@@ -167,9 +167,9 @@
                         I have background in signal and image processing, embedded system, machine learning, computer vision, and naturallanguage processing.
                         In 2019, I received my MSc with Distinction in <a href="https://www.ed.ac.uk/files/atoms/files/pgb-informatics-2018.pdf#page=5">Informatics</a> from <a href="https://www.ed.ac.uk/">The University of Edinburgh</a>, supervised by <a href="https://homepages.inf.ed.ac.uk/rbf/">Prof. Bob Fisher</a>.
                         In 2018, I received my B.Eng. in Telecommunication Engineering from <a href="https://www.bupt.edu.cn/">Beijing University of Posts and Telecommunications</a>.
+                        <!-- <br />
                         <br />
-                        <br />
-                        I am also an aspiring musician and <a href="https://www.instagram.com/_1wanghao1_/">photographer</a>.
+                        I am also an aspiring musician and <a href="https://www.instagram.com/_1wanghao1_/">photographer</a>. -->
                         <br />
                         <br />
                         You can view my CV <a href="./pdfs/CV-Hao-Wang.pdf">here</a>.
