--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 24px; color: #4F6071;"></i></a>
                         &emsp;<a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4F6071;"></i></a>
                         <!-- &emsp;<a href="https://twitter.com/HW7308"><i class="fab fa-twitter" style="font-size: 24px; color: #4F6071;"></i></a> -->
-                        &emsp;<a href="./pdfs/CV-Hao-Wang.pdf"><i class="ai ai-cv" style="font-size: 24px; color: #4F6071;"></i></a>
+                        &emsp;<a href="./pdfs/CV_Hao_Wang.pdf"><i class="ai ai-cv" style="font-size: 24px; color: #4F6071;"></i></a>
                     </div>
                 </div>
             </div>
@@ -172,7 +172,7 @@
                         I am also an aspiring musician and <a href="https://www.instagram.com/_1wanghao1_/">photographer</a>. -->
                         <br />
                         <br />
-                        You can view my CV <a href="./pdfs/CV-Hao-Wang.pdf">here</a>.
+                        You can view my CV <a href="./pdfs/CV_Hao_Wang.pdf">here</a>.
                     </p>
                 </div>
 
