--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -166,7 +166,7 @@
                         </div>
                     </div>
                     <div class='vspace-top'>
-                        Here is my <a href="../pdfs/CV-Hao-Wang.pdf">CV</a> if you are interested!
+                        Here is my <a href="../pdfs/CV_Hao_Wang.pdf">CV</a> if you are interested!
                     </div>
                 </div>
             </div>
