--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
                 <h1>Bio</h1>
                 <div>
                     <p>
-                        Hi! I am Hao Wang, currently a research intern at the Center for Biometrics and Security Research & National Laboratory of Pattern Recognition, Institute of Automation of the Chinese Academy of Sciences. My research interestsare in 3D Vision and Graphics.
+                        Hi! I am Hao Wang, currently a research intern at the Center for Biometrics and Security Research & National Laboratory of Pattern Recognition, Institute of Automation of the Chinese Academy of Sciences.
+                        My research interests are in 3D Vision and Graphics.
                         <br />
                         <br />
                         I have background in signal and image processing, embedded system, machine learning, computer vision, and naturallanguage processing.
