--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div class="topnav">
         <div class='container'>
             <a href="./subpage/contact.html">Contact</a>
-            <a href="./subpage/aboutme.html">About</a>
+            <a href="./subpage/aboutme.html">About Me</a>
             <a href="#research">Research</a>
             <!-- <a href="#publications">Publications</a> -->
             <a href="#news">News</a>
