--- a/subpage/aboutme.html
+++ b/subpage/aboutme.html
@@ -117,7 +117,7 @@
     <div class="topnav">
         <div class='container'>
             <a href="./contact.html">Contact</a>
-            <a href="#about">About</a>
+            <a href="#about">About Me</a>
             <a href="../index.html#research">Research</a>
             <!-- <a href="#publications">Publications</a> -->
             <a href="../index.html#news">News</a>
