--- a/subpage/contact.html
+++ b/subpage/contact.html
@@ -117,7 +117,7 @@
     <div class="topnav">
         <div class='container'>
             <a href="#contact">Contact</a>
-            <a href="./aboutme.html">About</a>
+            <a href="./aboutme.html">About Me</a>
             <a href="../index.html#research">Research</a>
             <!-- <a href="#publications">Publications</a> -->
             <a href="../index.html#news">News</a>
