--- a/subpage/contact.html
+++ b/subpage/contact.html
@@ -1,158 +1,192 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Hao Wang</title>
 
     <!-- Meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Page icon -->
-    <link rel="icon" href="../imgs/icon.ico" type="image/x-icon"/>
+    <link rel="icon" href="../imgs/icon.ico" type="image/x-icon" />
 
     <!-- Icons from Fontawesome & Academicons -->
-    <script src="https://kit.fontawesome.com/0575f02792.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/0575f02792.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="../academicons/css/academicons.min.css" />
 
     <!-- Custom Styles -->
     <style>
-        body {
-            font-family: 'sans-serif';
-            font-size: 16px;
-            background-color: #FFFFFF;
-            color: #4F6071;
-        }
-        #header {
-            background-color: #f4f4f4;
-            /*background-color: #FFFFFF;*/
-            display: flex;
-            align-items: flex-end;
-            padding-top:105px;
-            padding-bottom:60px;
-        }
-        #footer {
-            background-color: #F4F4F4;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-        #portrait {
-            border: 3px solid white;
-        }
-        #header-text {
-            margin-top: 60px;
-            margin-left: 220px;
-        }
-        #header-text-name {
-            font-size: 40px;
-        }
-        #header-text-status {
-            font-size: 15px;
-        }
-        #header-text-email {
-            font-size: 20px;
-            font-style: italic;
-        }
-        .header-text-desc {
-            font-size: 20px;
-        }
-        .vspace-top {
-            /* margin-top: 30px; */
-            padding-top: 60px;
-        }
-        .vspace-top-news {
-            margin-top: 15px;
-        }
-        .paper-image {
-            width: 150px;
-        }
-        .news-date {
-            font-weight: bold;
-        }
-        .paper-title {
-            font-weight: bold;
-        }
-        .paper-authors {
-            font-style: italic;
-        }
-        
-        /* Add a black background color to the top navigation */
-        .topnav {
-            background-color: #002133;
-            overflow: hidden;
-            position: fixed;
-            width: 100%;
-            z-index: 999;
-        }
+      body {
+        font-family: "sans-serif";
+        font-size: 16px;
+        background-color: #ffffff;
+        color: #4f6071;
+      }
+      #header {
+        background-color: #f4f4f4;
+        /*background-color: #FFFFFF;*/
+        display: flex;
+        align-items: flex-end;
+        padding-top: 105px;
+        padding-bottom: 60px;
+      }
+      #footer {
+        background-color: #f4f4f4;
+        padding: 10px;
+        position: fixed;
+        width: 100%;
+        bottom: 0;
+      }
+      #portrait {
+        border: 3px solid white;
+      }
+      #header-text {
+        margin-top: 60px;
+        margin-left: 220px;
+      }
+      #header-text-name {
+        font-size: 40px;
+      }
+      #header-text-status {
+        font-size: 15px;
+      }
+      #header-text-email {
+        font-size: 20px;
+        font-style: italic;
+      }
+      .header-text-desc {
+        font-size: 20px;
+      }
+      .vspace-top {
+        /* margin-top: 30px; */
+        padding-top: 60px;
+      }
+      .vspace-top-news {
+        margin-top: 15px;
+      }
+      .paper-image {
+        width: 150px;
+      }
+      .news-date {
+        font-weight: bold;
+      }
+      .paper-title {
+        font-weight: bold;
+      }
+      .paper-authors {
+        font-style: italic;
+      }
 
-        /* Style the links inside the navigation bar */
-        .topnav a {
-            float: right;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-        }
+      /* Add a black background color to the top navigation */
+      .topnav {
+        background-color: #002133;
+        overflow: hidden;
+        position: fixed;
+        width: 100%;
+        z-index: 999;
+      }
 
-        /* Change the color of links on hover */
-        .topnav a:hover {
-            background-color: #ddd;
-            color: black;
-        }
+      /* Style the links inside the navigation bar */
+      .topnav a {
+        float: right;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+        font-size: 17px;
+      }
 
-        /* Add a color to the active/current link */
-        .topnav a.active {
-            background-color: #ddd;
-            color: black;
-        }
+      /* Change the color of links on hover */
+      .topnav a:hover {
+        background-color: #ddd;
+        color: black;
+      }
+
+      /* Add a color to the active/current link */
+      .topnav a.active {
+        background-color: #ddd;
+        color: black;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="topnav">
-        <div class='container'>
-            <a href="#contact">Contact</a>
-            <a href="./aboutme.html">About Me</a>
-            <a href="../index.html#research">Research</a>
-            <!-- <a href="#publications">Publications</a> -->
-            <a href="../index.html#news">News</a>
-            <a href="../index.html">Home</a>
-        </div>
+      <div class="container">
+        <a href="#contact">Contact</a>
+        <a href="./aboutme.html">About Me</a>
+        <a href="../index.html#research">Research</a>
+        <!-- <a href="#publications">Publications</a> -->
+        <a href="../index.html#news">News</a>
+        <a href="../index.html">Home</a>
+      </div>
     </div>
 
-    <div id="contact" class='container'>
-        <div class='row vspace-top'>
-            <div class='col offset-sm-1'>
-                <div class='vspace-top'>
-                    <h1>Contact</h1>
-                </div>
-                <div class='vspace-top'>
-                    <p>
-                        Feel free to get in touch! I will get back to you ASAP :D
-                        <br />
-                        <br />
-                        Email: <a href="jackw7308@gmail.com">jackw7308@gmail.com</a>
-                        <br />
-                        <br />
-                        You can also find me at:
-                        &emsp;<a href="https://orcid.org/0000-0003-3847-524X"><i class="fab fa-orcid" style="font-size: 24px; color: #4F6071;"></i></a>
-                        &emsp;<a href="https://github.com/HWANG7308"><i class="fab fa-github" style="font-size: 24px; color: #4F6071;"></i></a>
-                        &emsp;<a href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"><i class="fab fa-linkedin-in" style="font-size: 24px; color: #4F6071;"></i></a>
-                        &emsp;<a href="https://www.facebook.com/profile.php?id=100007039683298"><i class="fab fa-facebook-f" style="font-size: 24px; color: #4F6071;"></i></a>
-                        &emsp;<a href="https://www.instagram.com/_1wanghao1_/"><i class="fab fa-instagram" style="font-size: 24px; color: #4F6071;"></i></a>
-                        <!-- &emsp;<a href="https://twitter.com/HW7308"><i class="fab fa-twitter" style="font-size: 24px; color: #4F6071;"></i></a> -->
-                        <br />
-                    </p>
-                </div>
-            </div>
+    <div id="contact" class="container">
+      <div class="row vspace-top">
+        <div class="col offset-sm-1">
+          <div class="vspace-top">
+            <h1>Contact</h1>
+          </div>
+          <div class="vspace-top">
+            <p>
+              Feel free to get in touch! I will get back to you ASAP :D
+              <br />
+              <br />
+              Email:
+              <a href="mailto:jackw7308@gmail.com">jackw7308@gmail.com</a>
+              <br />
+              <br />
+              You can also find me at: &emsp;<a
+                href="https://orcid.org/0000-0003-3847-524X"
+                ><i
+                  class="fab fa-orcid"
+                  style="font-size: 24px; color: #4F6071;"
+                ></i
+              ></a>
+              &emsp;<a href="https://github.com/HWANG7308"
+                ><i
+                  class="fab fa-github"
+                  style="font-size: 24px; color: #4F6071;"
+                ></i
+              ></a>
+              &emsp;<a
+                href="https://www.linkedin.com/in/%E7%81%8F-%E7%8E%8B-31a876a2/?locale=en_US"
+                ><i
+                  class="fab fa-linkedin-in"
+                  style="font-size: 24px; color: #4F6071;"
+                ></i
+              ></a>
+              &emsp;<a
+                href="https://www.facebook.com/profile.php?id=100007039683298"
+                ><i
+                  class="fab fa-facebook-f"
+                  style="font-size: 24px; color: #4F6071;"
+                ></i
+              ></a>
+              &emsp;<a href="https://www.instagram.com/_1wanghao1_/"
+                ><i
+                  class="fab fa-instagram"
+                  style="font-size: 24px; color: #4F6071;"
+                ></i
+              ></a>
+              <!-- &emsp;<a href="https://twitter.com/HW7308"><i class="fab fa-twitter" style="font-size: 24px; color: #4F6071;"></i></a> -->
+              <br />
+            </p>
+          </div>
         </div>
-        <!-- Back to top -->
-        <!-- <div class='vspace-top'>
+      </div>
+      <!-- Back to top -->
+      <!-- <div class='vspace-top'>
             <a href="#contact" style="display: block; text-align: center;">[Back to Top]</a>
         </div> -->
     </div>
@@ -161,19 +195,26 @@
         <center> Hao Wang &copy; 2019 </center>
     </div> -->
 
-    <div id='footer' class='vspace-top'>
-        <center>
-            <script language=Javascript>
-                var dd = document.lastModified;
-                var pp = new Date(dd);
-                document.write("Last Updated: " + pp.getFullYear() + "-" + (pp.getMonth() + 1) + "-" + pp.getDate());
-            </script>
-        </center>
+    <div id="footer" class="vspace-top">
+      <center>
+        <script language="Javascript">
+          var dd = document.lastModified;
+          var pp = new Date(dd);
+          document.write(
+            "Last Updated: " +
+              pp.getFullYear() +
+              "-" +
+              (pp.getMonth() + 1) +
+              "-" +
+              pp.getDate()
+          );
+        </script>
+      </center>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
