--- a/subpage/contact.html
+++ b/subpage/contact.html
@@ -146,7 +146,7 @@
               <a href="mailto:jackw7308@gmail.com">jackw7308@gmail.com</a>
               <br />
               <br />
-              You can also find me at: &emsp;<a
+              &emsp;<a
                 href="https://orcid.org/0000-0003-3847-524X"
                 ><i
                   class="fab fa-orcid"
