--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <h1>Publication</h1>
                         <div class="row vspace-top">
                             <div class="col-sm-3">
-                                <img src="imgs/fgnet.png" class="img-fluid" />
+                                <img src="imgs/preprint.jpg" class="img-fluid" />
                             </div>
                             <div class="col">
                                 <div class="paper-title">
