--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                             <br />
                         </div>
                         <div id="header-text-email">
-                            jackw7308 (at) gmail (dot) com
+                            haowang7308 (at) gmail (dot) com
                         </div>
                         <div>
                             <br />
